Add readme link

--- a/index.html
+++ b/index.html
@@ -26,9 +26,19 @@
         .result {
             padding: 12px;
         }
+        .readme {
+            position: fixed;
+            bottom: 0;
+            right: 0;
+            padding: 2px 8px;
+            margin: 1px;
+            color: darkgray;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
+    <a class="readme" title="Open Readme" href="https://github.com/AlttiRi/web-share-demo" target="_blank"><i>i</i></a>
     <div id="app">
         <button id="btn-img">Share Image</button>
         <button id="btn-vid">Share Video</button>
